# datacenter

./: Makefile  go.mod  go.sum  main.go
business/: common.go  data.go  mpc.go
datacenter/: Makefile  go.sum  main.go
datacenter-apiserver/: main.go
datacenter-apiserver/business/: data.go  gateway.go
datacenter-apiserver/common/: common.go
datacenter-apiserver/model/: data.go
datacenter-client/: go.mod  go.sum  main.go
datacenter-client/business/: data.go
datacenter-client/model/: data.go
datacenter/business/: data.go
datacenter/idx/: meta.json
idx/: .managed.json
model/: data.go  mpc.go
mpc/: main.go
mpc/business/: mpc.go
sgx/: .gitignore  Makefile
sgx/app/: Cargo.toml
sgx/app/src/: lib.rs
sgx/enclave/: Cargo.toml  Enclave.config.xml  Enclave.edl
sgx/enclave/src/: lib.rs
