[package]
name = "Helloworldsampleenclave"
version = "1.0.0"
authors = ["The Teaclave Authors"]

[lib]
name = "helloworldsampleenclave"
crate-type = ["staticlib"]

[features]
default = []

[dependencies]
tantivy =  { git = "https://github.com/lengyijun/tantivy",branch="sgx"}
#tantivy =  { path = "./tantivy"}
lazy_static = {version="1.4.0",features = ["spin_no_std"] }
serde = { git = "https://github.com/mesalock-linux/serde-sgx", branch = "master", features = ["derive", "rc"] }
serde_json = { git = "https://github.com/mesalock-linux/serde-json-sgx", branch = "master" }


[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_types = {version = "1.0", rev = "v1.1.2",git = "https://github.com/apache/teaclave-sgx-sdk.git" }
sgx_tstd = { version = "1.0", rev = "v1.1.2",git = "https://github.com/apache/teaclave-sgx-sdk.git", features = ["backtrace"] }
sgx_trts = { version = "1.0", rev = "v1.1.2",git = "https://github.com/apache/teaclave-sgx-sdk.git" }

